--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/title_activity_main" >
-
+        </activity>
+        <activity
+            android:name=".activity.WeatherActivity"
+            android:label="@string/title_activity_weather" >
         </activity>
     </application>
 
